Updated  warning code